add alien's dying animation & related marker

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LDJAM 41 by nidup</title>
+    <title>Cowboys vs Aliens</title>
     <style>
         body {
             margin: 0;
